--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "url": "git+https://github.com/Workintech/FSWeb-S2G4-JavaScript-tekrar.git"
   },
   "devDependencies": {
-    "@babel/core": "7.17.8",
+    "@babel/core": "^7.28.6",
     "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "7.16.11",
+    "@babel/runtime": "^7.28.6",
     "@types/jest": "27.4.1",
     "eslint": "8.11.0",
     "jest": "27.5.1",
